--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -11753,13 +11753,13 @@ series:
       meta_description: '**Talk Synopsis**
 
         Join the [TypeDB community](https://docs.vaticle.com/docs/general/quickstart) to learn how we think about data modelling, and how TypeDB''s expressivity al'
-      og_title: TypeDB Academy | Modelling Principles, Tue, Dec 6, 2022, 6:30 PM   | Meetup
+      og_title: TypeDB Academy | Modelling Principles, Tue, Oct 11, 2022, 6:30 PM   | Meetup
       url: https://www.meetup.com/typedb-prague/events/288456873/
       ical:
         summary: TypeDB Academy | Modelling Principles
         description: 'TypeDB Prague Engineers
 
-          Tuesday, December 6 at 6:30 PM
+          Tuesday, October 11 at 6:30 PM
 
 
           **Talk Synopsis**Join the (https://docs.vaticle.com/docs/general/quickstart) to learn how we think about data modelling, and how TypeDB''s expressivity...
@@ -11773,8 +11773,8 @@ series:
         status: CONFIRMED
         uid: event_288456873@meetup.com
         url: https://www.meetup.com/typedb-prague/events/288456873/
-        dtstart: 2022-12-06 18:30:00+01:00
-        dtend: 2022-12-06 19:30:00+01:00
+        dtstart: 2022-10-11 18:30:00+02:00
+        dtend: 2022-10-11 19:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
@@ -12190,6 +12190,61 @@ series:
         url: https://www.meetup.com/typedb-prague/events/287924630/
         dtstart: 2022-09-20 18:30:00+02:00
         dtend: 2022-09-20 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Comparing Semantic Web Technologies to TypeDB
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, September 20 at 6:30 PM
+
+          \n**Talk Synopsis**Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reas...
+
+
+          https://www.meetup.com/typedb-prague/events/287924630/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287924630@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/287924630/
+        dtstart: 2022-09-20 18:30:00+02:00
+        dtend: 2022-09-20 19:30:00+02:00
+  - meetupcom:
+      meta_description: '**Talk Synopsis**
+
+        Build your skills and learn how TypeDB''s native inference engine works.
+
+
+        **Good for:**
+
+
+        * Beginners to [TypeDB and TypeQL](https://docs.vaticle.com/docs/g'
+      og_title: TypeDB Academy | Inference with Rules, Thu, Oct 13, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/288726849/
+      ical:
+        summary: TypeDB Academy | Inference with Rules
+        description: 'TypeDB Prague Engineers
+
+          Thursday, October 13 at 6:30 PM
+
+
+          **Talk Synopsis**Build your skills and learn how TypeDB''s native inference engine works. **Good for:** * Beginners to (https://docs.vaticle.com/docs/g...
+
+
+          https://www.meetup.com/typedb-prague/events/288726849/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288726849@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/288726849/
+        dtstart: 2022-10-13 18:30:00+02:00
+        dtend: 2022-10-13 19:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
