--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -17583,3 +17583,54 @@ series:
         url: https://www.meetup.com/strv-meetups/events/287714126/
         dtstart: 2022-08-24 18:00:00+02:00
         dtend: 2022-08-24 22:00:00+02:00
+  - meetupcom:
+      meta_description: '**💥 [MAKE SURE TO GET YOUR FREE TICKET HERE](https://www.eventbrite.com/e/mobile-leads-meetup-vol2-tickets-427847462277?aff=meetup) 💥**
+
+
+        You’re invited to Part 2 of the *'
+      og_title: Mobile Leads Meetup Vol.2, Wed, Oct 12, 2022, 5:00 PM   | Meetup
+      url: https://www.meetup.com/strv-meetups/events/288749089/
+      ical:
+        summary: Mobile Leads Meetup Vol.2
+        description: 'STRV Meetups
+
+          Wednesday, October 12 at 5:00 PM
+
+
+          **💥 (https://www.eventbrite.com/e/mobile-leads-meetup-vol2-tickets-427847462277?aff=meetup) 💥** You’re invited to Part 2 of the **Mobile Leads Meetup*...
+
+
+          https://www.meetup.com/strv-meetups/events/288749089/'
+        location: STRV (Přízova 284/5, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288749089@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/288749089/
+        dtstart: 2022-10-12 17:00:00+02:00
+        dtend: 2022-10-12 22:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Web3 Palace Meetup by HoL & STRV
+        description: 'STRV Meetups
+
+          Wednesday, August 24 at 6:00 PM
+
+
+          ! (https://events.enter.xyz/web3-palace-meetup) ! Consider this your royal invitation to a special STRV Web3 Meetup. Still talking NFTs and crypto but...
+
+
+          https://www.meetup.com/strv-meetups/events/287714126/'
+        location: Lobkowicz Palace (Jiřská 3, Praha 1-Hradčany, Czech Republic 119 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287714126@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/287714126/
+        dtstart: 2022-08-24 18:00:00+02:00
+        dtend: 2022-08-24 22:00:00+02:00
