--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -10270,11 +10270,9 @@ series:
         dtstart: 2022-08-25 18:30:00+02:00
         dtend: 2022-08-25 19:30:00+02:00
   - meetupcom:
-      meta_description: '**Talk Synopsis**
-
-        Using SQL to query relational databases is easy. As a declarative language, it’s straightforward to write queries and build powerful applications. However'
-      og_title: Beyond SQL | Comparing SQL to TypeQL, Tue, Sep 27, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/287924665/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Beyond SQL | Comparing SQL to TypeQL
         description: 'TypeDB Prague Engineers
