--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -17936,3 +17936,54 @@ series:
         url: https://www.meetup.com/strv-meetups/events/288474366/
         dtstart: 2022-09-29 18:00:00+02:00
         dtend: 2022-09-29 20:00:00+02:00
+  - meetupcom:
+      meta_description: '**🔥 [PLEASE MAKE SURE TO GET YOUR TICKET VIA EVENTBRITE](https://www.eventbrite.com/e/strv-design-meetup-tickets-429596002207?aff=meetup) 🔥**
+
+
+        Curious about how to design'
+      og_title: STRV Design Meetup, Thu, Oct 13, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/strv-meetups/events/288874466/
+      ical:
+        summary: STRV Design Meetup
+        description: 'STRV Meetups
+
+          Thursday, October 13 at 6:00 PM
+
+
+          **🔥 (https://www.eventbrite.com/e/strv-design-meetup-tickets-429596002207?aff=meetup) 🔥** Curious about how to design an app worthy of an Apple Design...
+
+
+          https://www.meetup.com/strv-meetups/events/288874466/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288874466@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/288874466/
+        dtstart: 2022-10-13 18:00:00+02:00
+        dtend: 2022-10-13 20:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: STRV iOS Meetup - Deep Dive ft. Special Guests
+        description: 'STRV Meetups
+
+          Thursday, September 29 at 6:00 PM
+
+
+          **👉 (https://www.eventbrite.com/e/ios-meetup-deep-dive-ft-special-guests-tickets-419493264647?aff=meetup) 👈** --- You’re invited to a very special iOS...
+
+
+          https://www.meetup.com/strv-meetups/events/288474366/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288474366@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/288474366/
+        dtstart: 2022-09-29 18:00:00+02:00
+        dtend: 2022-09-29 20:00:00+02:00
